Signing cs projecys with strong name key

--- a/src/MongoDB.Driver.Core/MongoDB.Driver.Core.csproj
+++ b/src/MongoDB.Driver.Core/MongoDB.Driver.Core.csproj
@@ -100,6 +100,8 @@
 
   <PropertyGroup>
     <ZstdBinaries>Core/Compression/Zstandard/lib/win</ZstdBinaries>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>CloudAssertProductionSignKey.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(IsWindows)' == true ">
